--- a/pom.xml
+++ b/pom.xml
@@ -11,13 +11,16 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <source-code>1.8</source-code>
+        <source-code>11</source-code>
+        <jacoco.version>0.8.6</jacoco.version>
+        <sonar.coverage.exclusions>**/changeaddress/config/*
+        </sonar.coverage.exclusions>
 
         <junit.platform.version>1.3.2</junit.platform.version>
-        <junit.jupiter.version>5.3.1</junit.jupiter.version>
-        <junit.mockito.version>2.23.4</junit.mockito.version>
-        <junit.byte.buddy.version>1.9.5</junit.byte.buddy.version>
-        <junit.powermock.version>1.7.4</junit.powermock.version>
+        <junit.jupiter.version>5.7.2</junit.jupiter.version>
+        <junit.mockito.version>3.11.2</junit.mockito.version>
+        <junit.byte.buddy.version>1.11.6</junit.byte.buddy.version>
+        <junit.powermock.version>2.0.9</junit.powermock.version>
 
     </properties>
 
@@ -26,7 +29,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.0</version>
+                <version>3.8.1</version>
                 <configuration>
                     <fork>true</fork>
                     <source>${source-code}</source>
@@ -47,7 +50,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-pmd-plugin</artifactId>
-                <version>3.11.0</version>
+                <version>3.14.0</version>
                 <executions>
                     <execution>
                         <phase>compile</phase>
@@ -66,18 +69,40 @@
                     </rulesets>
                 </configuration>
             </plugin>
-
-            <!-- For JUnit 5 Support -->
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M1</version>
+                <groupId>pl.project13.maven</groupId>
+                <artifactId>git-commit-id-plugin</artifactId>
+                <version>4.0.4</version>
+                <configuration>
+                    <dateFormat>dd-MM-yyyy HHmmss Z</dateFormat>
+                    <dateFormatTimeZone>America/Sao_Paulo</dateFormatTimeZone>
+                </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>${jacoco.version}</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>report</id>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
 
             <plugin>
                 <groupId>org.sonarsource.scanner.maven</groupId>
                 <artifactId>sonar-maven-plugin</artifactId>
-                <version>3.5.0.1254</version>
+                <version>3.9.0.2155</version>
             </plugin>
         </plugins>
     </build>
@@ -143,6 +168,12 @@
             <artifactId>hsqldb</artifactId>
             <version>2.4.1</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.20</version>
+            <optional>true</optional>
         </dependency>
         <!-- JUnit 4 Compatibility
         <dependency>
